--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Bite</title>
+    
+    <link rel="icon" type="favicon.ico" href="./1.png">
     <link rel="stylesheet" href="styles.css">
     <script>
         function navigateTo(page) {
